# soutools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/soutools/: controller.py  helpers.py  main.py  menu.py  model.py  settings.py
tests/: test_settings.py
