[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "soutools"
version = "0.0.5"
dynamic = ["dependencies"]

[project.scripts]
soutools = "soutools.main:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.flake8]
max-line-length = 99