[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soutools"
version = "0.0.5"
readme = "README.md"
license = { text = "MIT License" }
description = "Tools to interact with the Meraki API"
authors = [{ name = "J. Fausett" }]
dynamic = ["dependencies"]
keywords = ["Meraki", "API", "TUI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Meraki :: API Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/devnetkid"

[project.scripts]
soutools = "soutools.main:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.flake8]
max-line-length = 99
